# sf-terraria-adventure

./: .gitignore  CHANGELOG.md  README.md  pack.json  roadmap.yaml  todo.yaml  workshop.json  workshop_info.bbc
.github/images/: presentation-template.ase
Content/Images/: desktop.ini
Content/Localization/: en-US-BestiaryBosses.csv  en-US-BestiaryNPCs.csv  en-US-BestiaryOther.csv  en-US-Bosses.csv  en-US-Buffs.csv  en-US-Credits.csv  en-US-DeathTexts.csv  en-US-Dialog.csv  en-US-Emotes.csv  en-US-Items.csv  en-US-ItemsAccessories.csv  en-US-ItemsArmor.csv  en-US-ItemsColors.csv  (+17 more)
ExternalAssets/: !Banners.ase  !Buff.ase  !Projectile_398.ase  !bartender.ase  !eye boss.ase  !furniture sets.ase  !grasses.ase  !leaf gores.ase  !sanstrocity prime but with wrong resolution.ase  !sevenbones.ase  !tile with dirt.ase  Arapaima.ase  Background_93_114-116.ase  BadThymeDiagram.ase  Banners.ase  Bars.ase  Beams.ase  Buffs.ase  ButtonPlay.ase  Cage3x2.ase  Campfires.ase  ChatBubbles.ase  Dust.ase  FallingLeaves.ase  Fences.ase  Flame_0.ase  Flame_13.ase  Flame_2.ase  Flame_3.ase  FurnitureSets.ase  GiantTortoise.ase  HoneyDispenser.ase  Hornets.ase  IconEverythingAnimated.ase  Icon_Tags_Shadow.ase  JungleCreeper.ase  Larva.ase  Moth.ase  MountBee.ase  PetTurtle.ase  (+13 more)
Tools/: build_pack.bat  jigsaw.bat  open_dirs.bat  scan_pack.bat  wav_to_xnb.bat
Tools/pack_diagnostic/: .markdownlint.json  Cargo.toml  README.md
Tools/pack_diagnostic/src/: build.rs  crawlers.rs  generator.rs  helpers.rs  main.rs  slop.rs  user_interface.rs
Tools/pack_diagnostic/src/crawlers/: images.rs  texts.rs
(+40 files in other folders)
