[package]
name = "pack_diagnostic"
authors = ["ThEnderYoshi"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive", "string"] }
csv = "1.2.2"
lazy_static = "1.4.0"
regex = "1"
walkdir = "2"
